Change 698 Version ver-4_1_1_9 Small generalization
git-svn-id: file:///root/var/svn/aranea/branches/latest@4680 baba0d3d-6527-0410-ba98-ffd8059025de